5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4077/executions/1602_2895.log
== TEST (2019-03-20 18:22:42) 
-- CODE:
quantidade:int(input("quantidade jogos"))
var:float(input("valor um. :")
frete = float(input("frete"))

print(total)
-- ERROR:
File "XXXX", line 3
    frete = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:23:01) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var:float(input("valor um. :")
frete = float(input("frete"))

print(total)
-- ERROR:
File "XXXX", line 3
    frete = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:23:14) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var:float(input("valor un. :")
frete = float(input("frete"))

print(total)
-- ERROR:
File "XXXX", line 3
    frete = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:23:24) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = float(input("valor un. :")
frete = float(input("frete"))

print(total)
-- ERROR:
File "XXXX", line 3
    frete = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:24:18) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = float(input("valor un. :")
frete = float(input("frete :"))

print(total)
-- ERROR:
File "XXXX", line 3
    frete = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:27:31) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = float(input("valor un. :")
frete = float(input("frete :"))
total = quantidade * valor + frete
print(total)
-- ERROR:
File "XXXX", line 3
    frete = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:28:26) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = float(input("valor un. :")

total = quantidade * valor + frete
print(total)
-- ERROR:
File "XXXX", line 4
    total = quantidade * valor + frete
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:28:52) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = float(input("valor un. :")
frete = input("frete :")
total = quantidade * valor + frete
print(total)
-- ERROR:
File "XXXX", line 3
    frete = input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:29:22) 
-- CODE:
quantidade = int(input("quantidade jogos"))

-- ERROR:
File "XXXX", line 3
    frete = input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:29:34) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = float(input("valor un. :")

-- ERROR:
File "XXXX", line 3
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:29:50) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = float(input("valor un. :")
-- ERROR:
File "XXXX", line 3
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:30:08) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = float(input("valor un. :")
print(var)
-- ERROR:
File "XXXX", line 3
    print(var)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:30:32) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = float(input("valor un. :")
frete = float(input("frete :"))
total = quantidade * valor + frete
print(total)
-- ERROR:
File "XXXX", line 3
    frete = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:31:45) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = float(input("valor un. :")
frete = float(input("frete :"))
total = quantidade * valor + frete
print(total)
-- ERROR:
File "XXXX", line 3
    frete = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:32:45) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = float(input("valor un. :")
frete = float(input("frete :"))
total = quantidade * valor + frete
print(total)
-- ERROR:
File "XXXX", line 3
    frete = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:33:26) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = float(input("valor un. :")
frete = float(input("frete :"))
total = quantidade * valor + frete
print(total)
-- ERROR:
File "XXXX", line 3
    frete = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:42:37) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = float(input("valor un. :")
frete = float(input("frete :"))
total = quantidade * valor + frete
print(total)
-- ERROR:
File "XXXX", line 3
    frete = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:43:28) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = float(input("valor un. :")
frete = float(input("frete :"))
total = quantidade * valor + frete
print(total)
-- ERROR:
File "XXXX", line 3
    frete = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:18:51) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = float(input("valor un. :")
frete = float(input("frete :"))
total = quantidade * valor + frete
print(total)
-- EXECUTION TIME:
0.216766
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 3
    frete = float(input())
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:18:56) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = float(input("valor un. :")
frete = float(input("frete :"))
total = quantidade * valor + frete
print(total)
-- ERROR:
File "XXXX", line 3
    frete = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:20:11) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = float(input("valor un. :")
frete = float(input("frete, :"))
total = quantidade * valor + frete
print(total)
-- ERROR:
File "XXXX", line 3
    frete = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 03:10:38) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = int(input("valor un. :")
frete = float(input("frete, :"))
total = quantidade * valor + frete
print(total)
-- ERROR:
File "XXXX", line 3
    frete = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 03:11:02) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = int(input("valor un. :")
frete = int(input("frete, :"))
total = quantidade * valor + frete
print(total)
-- ERROR:
File "XXXX", line 3
    frete = int(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 03:11:17) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = int(input("valor un. :")
frete = int(input("frete: "))
total = quantidade * valor + frete
print(total)
-- ERROR:
File "XXXX", line 3
    frete = int(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:08:34) 
-- CODE:
quantidade = int(input("quantidade jogos"))
var = float(input("valor un. :"))
frete = float(input("frete, :"))
total = quantidade * valor + frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = quantidade * valor + frete
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:08:43) 
-- CODE:
quantidade = int(input("quantidade jogos: "))
var = float(input("valor un. :"))
frete = float(input("frete, :"))
total = quantidade * valor + frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = quantidade * valor + frete
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:09:10) 
-- CODE:
quantidade = int(input("quantidade jogos: "))
var = float(input("valor un. :"))
frete = float(input("frete, :"))
total = quantidade * var + frete
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:09:20) 
-- CODE:
quantidade = int(input("quantidade jogos: "))
var = float(input("valor un. :"))
frete = float(input("frete, :"))
total = quantidade * var + frete
print(total)
-- EXECUTION TIME:
0.152734
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
